...
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/title_margin_top"
                    android:layout_marginEnd="8dp"
                    style="@style/TextInputLayoutStyle"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_task_name"
                        android:imeOptions="actionNext"
                        android:text="@{todo.name}"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:hintEnabled="false"
                    style="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:text="@{todo.description}"
                        android:hint="@string/enter_description"
                        android:imeOptions="actionDone"
...
                    android:id="@+id/time_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />

                <CheckBox
                    android:id="@+id/remind10MinutesCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                     android:checked="@{todo.remind10}"
                    android:layout_marginBottom="5dp"
                    android:text="Remind me 10 minutes ahead of time" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tag_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clipToPadding="false"
                    android:hint="@string/tag"
                    android:paddingStart="16dp"
...
                    app:helperTextEnabled="true"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_tag" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:layout_height="wrap_content" />
...
