<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.omar_aly.todo_list.model.TodoState" />

        <variable
            name="todo"
            type="com.omar_aly.todo_list.model.Todo" />
    </data>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/task_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/design_default_color_background"
            android:layout_margin="@dimen/card_margin"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">


                <View
                    android:id="@+id/task_tag_color"
                    android:layout_width="14dp"
                    app:tagColorView="@{todo.tag.resId}"
                    android:layout_height="match_parent" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="10sp"
                    android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/task_name_text_view"
                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                    android:layout_marginTop="5dp"

                    android:maxLines="1"
                    android:textAppearance="?attr/textAppearanceBody2"
                      tools:text="@tools:sample/lorem/random" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/task_description_text_view"
                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{todo.description}"
                     android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gray"
                    android:textAppearance="?attr/textAppearanceBody2"
                      tools:text="@tools:sample/lorem/random" />


                </LinearLayout>


                <ImageButton
                    android:id="@+id/check_task_button"
                    android:layout_width="@dimen/image_button_large_size"
                    android:layout_height="@dimen/image_button_large_size"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/delete_task_button"
                    android:src="@{todo.state == TodoState.DOING ? @drawable/ic_check_24dp : @drawable/ic_replay_24dp, default = @drawable/ic_check_24dp}"
                     />



            </LinearLayout>

         </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>
