...
        <variable
            name="tag"
            type="com.omar_aly.todo_list.model.Tag" />
    </data>

    <FrameLayout
        android:id="@+id/tag_color_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tag_color"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/task_tag_color"
...
